--- a/package.json
+++ b/package.json
@@ -23,24 +23,32 @@
     "@payloadcms/payload-cloud": "3.49.0",
     "@payloadcms/richtext-lexical": "3.49.0",
     "@payloadcms/ui": "3.49.0",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/postcss": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "graphql": "^16.11.0",
     "lucide-react": "^0.533.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "payload": "3.49.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.8.1",
     "sharp": "0.34.2",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.14",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@playwright/test": "1.54.1",
